# MultiCobot-UR10-Gripper-Campero

./: CITATION.cff  README.md  README_ESP.md  frames.gv
src/Universal_Robots_ROS_Driver/ur_robot_driver/launch/: ur_control.launch
src/campero_common/: README.md
src/campero_common/campero_common/: CMakeLists.txt
src/campero_common/campero_control/: CMakeLists.txt
src/campero_common/campero_localization/: CMakeLists.txt
src/campero_common/campero_localization/maps/: firstFloor2.pgm  firstFloor2.yaml  firstFloor_map.yaml  mapa_kk.pgm  optitrackRoom_map.pgm  optitrackRoom_map.yaml  optitrackRoom_map2.pgm  optitrackRoom_map2.yaml  piso2.pgm  piso2.yaml  testMap.pgm  testMap.yaml
src/campero_common/campero_navigation/: CMakeLists.txt
src/campero_common/campero_navigation/config/: base_local_planner_params.yaml  eband_local_planner_omni_params.yaml
src/campero_common/campero_navigation/launch/: campero_nav.launch
src/campero_common/campero_pad/: CMakeLists.txt
src/campero_common/campero_pad/launch/: campero_pad.launch
src/campero_common/campero_pad/src/: campero_pad.cpp
src/campero_robot_real/campero_robot_real_bring_up/: CMakeLists.txt  package.xml
src/campero_robot_real/campero_robot_real_description/: CMakeLists.txt  package.xml
src/campero_robot_real/campero_robot_real_gazebo/: CMakeLists.txt  package.xml
src/campero_robot_real/campero_robot_real_leap_motion/: CMakeLists.txt  package.xml
src/campero_robot_real/campero_ur10_description/: CMakeLists.txt  package.xml
src/robotnik_sensors/urdf/: axis_m5013.urdf.xacro  axis_m5525.urdf.xacro
(+32 files in other folders)
